--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ python-dotenv         # For working with .env
 PyYAML                # For configuration (YAML parsing)
 pydantic              # For strongly typed models and validation
 python-dateutil       # For parsing dates from RSS feeds
+langgraph             # For workflow orchestration
+langchain-core        # For LangChain core functionality
+langchain             # For LangChain tools
