--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,13 @@ export TELEGRAM_CHAT_ID="your-telegram-chat-id"
 # OpenAI or other API keys can be added later
 OPENAI_API_KEY=your-openai-api-key
 
-# LangSmith configuration
+# LangSmith settings
 export LANGSMITH_TRACING="true"
 export LANGSMITH_API_KEY="your-langsmith-api-key"
 export LANGSMITH_PROJECT="your-langsmith-project" # For example "default"
+
+# SerpApi settings
+export SERPAPI_KEY="your_serpapi_key_here"
+
+# LLM settings
+export OPENAI_API_KEY="your_openai_api_key_here"
