Add search agent

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
 # Example environment variables for AI Agent Digest
 
 # Telegram settings
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
-TELEGRAM_CHAT_ID=your-telegram-chat-id
+export TELEGRAM_BOT_TOKEN="your-telegram-bot-token"
+export TELEGRAM_CHAT_ID="your-telegram-chat-id"
 
-# OpenAI or other API keys can be added later
-OPENAI_API_KEY=your-openai-api-key
+# LangSmith settings
+export LANGSMITH_TRACING="true"
+export LANGSMITH_API_KEY="your-langsmith-api-key"
+export LANGSMITH_PROJECT="your-langsmith-project" # For example "default"
+
+# SerpApi settings
+export SERPAPI_KEY="your_serpapi_key_here"
+
+# LLM settings
+export OPENAI_API_KEY="your_openai_api_key_here"
