Add posting to telegram channel

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,18 @@
 # Example environment variables for AI Agent Digest
 
 # Telegram settings
-export TELEGRAM_BOT_TOKEN="your-telegram-bot-token"
-export TELEGRAM_CHAT_ID="your-telegram-chat-id"
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_CHANNEL=your-telegram-channel-username   # or a numeric id like -1001234567890
+TELEGRAM_PARSE_MODE=HTML
+
 
 # LangSmith settings
-export LANGSMITH_TRACING="true"
-export LANGSMITH_API_KEY="your-langsmith-api-key"
-export LANGSMITH_PROJECT="your-langsmith-project" # For example "default"
+LANGSMITH_TRACING=true
+LANGSMITH_API_KEY=your-langsmith-api-key
+LANGSMITH_PROJECT=your-langsmith-project # For example default
 
 # SerpApi settings
-export SERPAPI_KEY="your_serpapi_key_here"
+SERPAPI_KEY=your_serpapi_key_here
 
 # LLM settings
-export OPENAI_API_KEY="your_openai_api_key_here"
+OPENAI_API_KEY=your_openai_api_key_here
