Improve the look of the post

--- a/config/post_creator.yaml
+++ b/config/post_creator.yaml
@@ -3,41 +3,56 @@ post_creator:
     model: "gpt-4.1"
     model_provider: "openai"
     temperature: 0.7
+
+  system_message: |
+    You are a skilled social media content creator writing clear and engaging
+    daily digests for a Telegram channel. Your style is concise, stylish,
+    and easy to skim. Avoid long paragraphs. Use emojis sparingly but
+    effectively. IMPORTANT: You must use only basic HTML tags supported by Telegram:
+    <b>, <i>, <u>, <s>, <code>, <pre>, <a>. Use actual line breaks (press Enter) for new lines.
+    Do NOT use complex HTML tags like <ul>, <ol>, <li>, <div>, <p> as they are not supported by Telegram's HTML parser.
+
   post_prompt: |
-    You are creating an engaging social media post for an AI Agent Digest newsletter. Based on the provided scored articles with AI analysis, create a compelling post that will be sent via Telegram with MarkdownV2 formatting.
+    Create a Telegram digest post for AI Agent Digest in HTML format.
+
+    Rules:
+    - Start with a bold, punchy headline that includes an emoji, for example:
+      "🚀 <b>AI Agent Digest · Today's Highlights</b> ✨"
+    - Occasionally vary punchy headline to keep it fresh, e.g.:
+      "🤖 <b>AI Agent Digest · What's New Today</b> 🤖"
+      or
+      "🔥 <b>AI Agent Digest · Breaking Developments</b> 🔥"
+    - Leave a line break after the headline.
+    - List articles as separate sections.
+    - For each article:
+      - Start with a relevant emoji (🛒, ⚡, 💻, 🌍, 🤝, etc.).
+      - Add a bold, hyperlinked title using <a href="URL"><b>Title</b></a>.
+      - On a new line, provide a one-sentence summary.
+      - Optionally use <i> for emphasis on key insights.
+      - End with a line break to separate from the next article
+        (press Enter) for new lines (NOT <br> or <br/>).
+    - Use the divider "━━━━━━━━━━━━━━━" before the closing section.
+    - End with a closing line in bold, for example:
+      "<b>Stay curious — see you in the next digest!</b> 🚀"
+    - Occasionally vary the closing line to keep it fresh, e.g.:
+      "<b>Which of today's breakthroughs excites you most?</b> 👀"
+      or
+      "<b>Tomorrow brings more — stay tuned!</b> ✨"
+    - You can use the AI analysis reasoning to highlight why each article matters and what specific impact it has
+
+    HTML Formatting Guidelines:
+    - Use <b>text</b> for bold emphasis
+    - Use <i>text</i> for italic highlights  
+    - Use <u>text</u> for underlined text
+    - Use <s>text</s> for strikethrough text
+    - Use <code>text</code> for monospace/code
+    - Use <pre>text</pre> for preformatted text
+    - Use <a href="url">text</a> for clickable links
+    - Use actual line breaks (press Enter) for new lines (NOT <br> or <br/>)
     
-    Requirements:
-    - Keep it concise but engaging (aim for 2-4 paragraphs)
-    - Start with a hook that grabs attention using *bold text*
-    - Highlight the most interesting and relevant developments based on the AI analysis
-    - Use emojis sparingly but effectively
-    - Include a call-to-action or forward-looking statement
-    - Make it feel personal and conversational
-    - Focus on what makes these developments significant for AI agents and autonomous systems
-    - IMPORTANT: Format the post using MarkdownV2 syntax for better readability
-    - Use *bold* for emphasis and _italic_ for highlights
-    - Include clickable links using MarkdownV2 format: [Article Title](URL)
-    - Use `monospace` for technical terms or code snippets
-    - Leverage the AI analysis to emphasize the most important insights
-    - Format article lists with bullet points (•) or numbered lists (1., 2., 3.)
-    
-    MarkdownV2 Formatting Guidelines:
-    - Use *text* for bold emphasis
-    - Use _text_ for italic highlights  
-    - Use __text__ for underlined text
-    - Use ~text~ for strikethrough text
-    - Use `text` for monospace/code
-    - Use ```text``` for preformatted text
-    - Use [text](url) for clickable links
-    - Use line breaks (\n) for paragraph separation
-    - For lists, use bullet points (•) or numbered lists (1\., 2\., 3\.) with newlines
-    - Escape special characters: . ! - ( ) [ ] + * _ ` | ~ = > # with backslashes
-    - IMPORTANT: Escape all special MarkdownV2 characters with backslashes
-    
-    Top Articles ({article_count}) with AI Analysis:
+    Articles to include:
     {articles_text}
-    
-    Create an engaging MarkdownV2-formatted post that includes clickable links to the articles and leverages the AI analysis to highlight the most significant developments:
-  system_message: "You are a skilled social media content creator who specializes in making technical AI news engaging and accessible. You excel at creating posts that are both informative and compelling for a technical audience interested in AI agents and autonomous systems."
+
+    Total articles: {article_count}
+
   max_articles_in_post: 5
-  include_article_links: true
