--- a/config/search_agent.yaml
+++ b/config/search_agent.yaml
@@ -6,7 +6,7 @@ search_agent:
     hl: "en"
     tbm: "nws"  # news
     tbs: "qdr:d"  # last 24 hours
-  chat_model:
+  llm:
     model: "gpt-4.1"
     model_provider: "openai"
     temperature: 0.3
